--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /client/release
+/ios/layatest/ios/layatest/resource/cache/stand.alone.version/filetable.bin
+/ios/layatest/ios/layatest/resource/cache/stand.alone.version/allfiles.txt
+/ios/layatest/ios/layatest/resource/cache/stand.alone.version/assetsid.txt
+/ios/layatest/ios/layatest/resource/cache/stand.alone.version/filetable.txt
+/ios/layatest/ios/layatest/resource/cache/stand.alone.version/filetable1.txt
